bindings/csharp/src/Nclink.Core/Native.cs

// SPDX-License-Identifier: MIT
// Copyright (c) 2026 huienming

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace Nclink
{
    /// <summary>
    /// 原生垫片（nclink_shim）的 P/Invoke 声明。
    ///
    /// 库里没有导出符号（静态库），而且托管侧不该碰 C 结构体布局，所以所有调用都经
    /// 过 bindings/native/nclink_shim.c —— 它只暴露不透明句柄、标量和 UTF-8
    /// 文本。字符串统一按 UTF-8 手工编解码（不用 PtrToStringAnsi：那在 Windows 上走
    /// 的是 ANSI 代码页，中文会乱）。
    /// </summary>
    internal static class Native
    {
        internal const string Dll = "nclink_shim";

        /* ------------------------------------------------------------- misc -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_version")]
        internal static extern IntPtr Version();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_err_name")]
        internal static extern IntPtr ErrName(int code);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_free")]
        internal static extern void Free(IntPtr ptr);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_env_set_root")]
        internal static extern void EnvSetRoot(byte[] root);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_env_root")]
        internal static extern IntPtr EnvRoot();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_log_init")]
        internal static extern int LogInit(byte[] dir);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_log_shutdown")]
        internal static extern void LogShutdown();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_log_set_level")]
        internal static extern void LogSetLevel(int level);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_log_set_console")]
        internal static extern void LogSetConsole(int enabled);

        /* ------------------------------------------------------------- json -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_parse")]
        internal static extern IntPtr JsonParse(byte[] text);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_clone")]
        internal static extern IntPtr JsonClone(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_free")]
        internal static extern void JsonFree(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_write")]
        internal static extern IntPtr JsonWrite(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_type")]
        internal static extern int JsonType(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_is_null")]
        internal static extern int JsonIsNull(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_as_int")]
        internal static extern int JsonAsInt(IntPtr json, out long value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_as_double")]
        internal static extern int JsonAsDouble(IntPtr json, out double value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_as_bool")]
        internal static extern int JsonAsBool(IntPtr json, out int value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_string")]
        internal static extern IntPtr JsonString(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_text")]
        internal static extern IntPtr JsonText(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_count")]
        internal static extern int JsonCount(IntPtr json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_array_get")]
        internal static extern IntPtr JsonArrayGet(IntPtr json, int index);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_object_value_at")]
        internal static extern IntPtr JsonObjectValueAt(IntPtr json, int index);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_object_key_at")]
        internal static extern IntPtr JsonObjectKeyAt(IntPtr json, int index);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_json_object_get")]
        internal static extern IntPtr JsonObjectGet(IntPtr json, byte[] key);

        /* ------------------------------------------------------------ model -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_model_parse")]
        internal static extern IntPtr ModelParse(byte[] json);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_model_free")]
        internal static extern void ModelFree(IntPtr root);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_model_write")]
        internal static extern IntPtr ModelWrite(IntPtr root);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_model_find_by_id")]
        internal static extern IntPtr ModelFindById(IntPtr root, byte[] id);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_type")]
        internal static extern int NodeType(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_type_name")]
        internal static extern IntPtr NodeTypeName(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_name")]
        internal static extern IntPtr NodeName(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_id")]
        internal static extern IntPtr NodeId(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_path")]
        internal static extern IntPtr NodePath(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_description")]
        internal static extern IntPtr NodeDescription(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_number")]
        internal static extern IntPtr NodeNumber(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_data_type")]
        internal static extern IntPtr NodeDataType(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_value_type")]
        internal static extern IntPtr NodeValueType(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_mapping")]
        internal static extern IntPtr NodeMapping(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_source")]
        internal static extern IntPtr NodeSource(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_version")]
        internal static extern IntPtr NodeVersion(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_guid")]
        internal static extern IntPtr NodeGuid(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_settable")]
        internal static extern int NodeSettable(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_value")]
        internal static extern IntPtr NodeValue(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_is_sample_channel")]
        internal static extern int NodeIsSampleChannel(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_sample_interval")]
        internal static extern long NodeSampleInterval(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_upload_interval")]
        internal static extern long NodeUploadInterval(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_sample_item_count")]
        internal static extern int NodeSampleItemCount(IntPtr node);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_sample_item_path")]
        internal static extern IntPtr NodeSampleItemPath(IntPtr node, int index);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_count")]
        internal static extern int NodeCount(IntPtr node, int kind);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_node_at")]
        internal static extern IntPtr NodeAt(IntPtr node, int kind, int index);

        /* -------------------------------------------------- message / sample -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_message_parse")]
        internal static extern IntPtr MessageParse(byte[] topic, byte[] payload, int payloadLen);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_message_free")]
        internal static extern void MessageFree(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_message_type")]
        internal static extern int MessageType(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_message_write")]
        internal static extern IntPtr MessageWrite(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_rows")]
        internal static extern int SampleRows(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_columns")]
        internal static extern int SampleColumns(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_is_complete")]
        internal static extern int SampleIsComplete(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_id")]
        internal static extern IntPtr SampleId(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_begin_time")]
        internal static extern IntPtr SampleBeginTime(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_interval")]
        internal static extern long SampleInterval(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_upload_interval")]
        internal static extern long SampleUploadInterval(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_path")]
        internal static extern IntPtr SamplePath(IntPtr msg, int col);
